--- a/views/header.ejs
+++ b/views/header.ejs
@@ -4,6 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Kode+Mono:wght@400..700&display=swap" rel="stylesheet"> 
+  <link rel="stylesheet" href="main.css"> <!-- 다른 스타일 시트도 포함할 경우 -->
 </head>
 <body>
   <div class="header">
