회원가입 페이지 스타일 작업

--- a/views/join.ejs
+++ b/views/join.ejs
@@ -5,18 +5,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link rel="stylesheet" href="main.css">
-</head>
-<body class="grey-bg">
-
+  </head>
+  <body class="grey-bg">
+    
   <%- include('header.ejs') %>
 
-  <form class="join-form" action="/join" method="POST">
-    <h4>가입</h4>
-    <input name="username" placeholder="ID">
-    <input name="password" type="password" placeholder="비밀번호">
-    <input name="passwordCheck" type="password" placeholder="비밀번호 확인">
-    <input name="email" type="email" placeholder="이메일">
-    <button type="submit">전송</button>
+
+  <form class="form-box" action="/join" method="POST">
+    <h4>SIGNUP</h4>
+    <input name="username" placeholder="Id">
+    <input name="password" type="password" placeholder="Password">
+    <input name="passwordCheck" type="password" placeholder="Confirm Password">
+    <input name="email" type="email" placeholder="Email">
+    <button type="submit">SUBMIT</button>
   </form>
 </body>  
 </html>
