--- a/views/login.ejs
+++ b/views/login.ejs
@@ -10,10 +10,10 @@
     <%- include('header.ejs') %>
 
   <form class="form-box" action="/login" method="POST">
-    <h4>로그인</h4>
+    <h4>LOGIN</h4>
     <input name="username">
     <input name="password" type="password">
-    <button type="submit">전송</button>
+    <button type="submit">SUBMIT</button>
 </form> 
 
 </body>
