메인페이지 추가 작업 해야됨

--- a/views/main.ejs
+++ b/views/main.ejs
@@ -5,11 +5,30 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link rel="stylesheet" href="main.css">
-  </head>
-  <body>
+</head>
+<body>
 
-  <%- include('header.ejs') %>
+<%- include('header.ejs') %>
 
-  <h1>mainpage</h1>
+ <h2 style="text-align: center;  ">INFO</h2>
+<table  >
+  <tr>
+    <th>ID</th>
+    <td>SHSH</td>
+  </tr>
+  <tr>
+    <th>NAME</th>
+    <td>BANGSUENGHEE</td>
+  </tr>
+  <tr>
+    <th>Email</th>
+    <td>bangseunghee1108@gmail.com</td>
+  </tr>
+  <tr>
+    <th>BIRTH</th>
+    <td>1996.11.08</td>
+  </tr>
+</table>
+
 </body>
 </html>
