--- a/views/login.ejs
+++ b/views/login.ejs
@@ -14,6 +14,11 @@
     <input name="username">
     <input name="password" type="password">
     <button type="submit">SUBMIT</button>
+    <br>
+    <div class="find-box">
+      <button type="button" class="button-id" onclick="location.href='/findusername'">아이디찾기</button>
+      <button type="button" class="button-id" onclick="location.href='/forgot-password'">비밀번호찾기</button>
+    </div>
 </form> 
 
 </body>
