--- a/views/write.ejs
+++ b/views/write.ejs
@@ -5,18 +5,36 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link rel="stylesheet" href="main.css">
-  </head>
-  <body class="grey-bg">
+  <script>
+    function validateForm() {
+      var titleInput = document.getElementById('title');
+      var titleValue = titleInput.value.trim(); // 입력값에서 공백 제거
+      var contentInput = document.getElementById('content');
+      var contentValue = contentInput.value.trim();
+
+      if (titleValue === '') {
+        alert('제목을 입력하세요.');
+        return false; // 폼 제출 방지
+      } else if (contentValue === '') {
+        alert('내용을 입력하세요.');
+        return false; // 폼 제출 방지
+      }
+
+      // 제목과 내용이 모두 입력된 경우에만 폼 제출을 허용
+      return true;
+    }
+  </script>
+</head>
+<body class="grey-bg">
     
   <%- include('header.ejs') %>
 
-  <form class="form-box" action="/newPost" method="POST">
+  <form class="form-box" action="/newPost" method="POST" onsubmit="return validateForm();">
     <h4>WRITE</h4>
-    <input name="title" class="input-title" placeholder="제목을 입력하세요.">
-    <input name="content" class="input-content" placeholder="내용을 입력하세요.">
+    <input id="title" name="title" class="input-title" placeholder="제목을 입력하세요.">
+    <input id="content" name="content" class="input-content" placeholder="내용을 입력하세요.">
     <!-- <input type="file" name="image" accept="image/*"> -->
     <button type="submit">SUBMIT</button>
-</form> 
-
+  </form> 
 </body>
 </html>
