--- a/public/main.css
+++ b/public/main.css
@@ -128,6 +128,10 @@ h1 {
   margin-top: 2vw;
 }
 
+.form-box button:hover {
+  background-color: #427D9D;
+}
+
 .input-title,
 .input-content {
   width: calc(100% - 2vw);
@@ -144,10 +148,6 @@ h1 {
   height: 30vh;
 }
 
-
-.form-box button:hover {
-  background-color: #427D9D;
-}
 
 .button-group a {
   display: inline-block;
@@ -252,4 +252,59 @@ h1 {
 
 .comment-form button {
   padding: 5px 10px;
+}
+
+a {
+  text-decoration: none; /* 링크의 밑줄 제거 */
+  color: inherit; /* 링크의 기본 색상으로 설정 */
+}
+
+
+/* .button-id {
+  width: 30vw;
+  background-color: #9BBEC8;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  height: 5vh;
+  font-size: 0.8rem;
+  margin-top: 2vw;
+}
+
+.form-box button:hover {
+  background-color: #427D9D;
+}
+*/.find-box {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  text-align: center;
+}
+
+.button-id {
+  width: 30vw; /* 버튼의 너비 설정 */
+  background-color: #9BBEC8; /* 배경색 */
+  color: white; /* 글자색 */
+  border: none; /* 테두리 없음 */
+  padding: 10px 20px; /* 내부 여백 */
+  text-align: center; /* 텍스트 가운데 정렬 */
+  text-decoration: none; /* 밑줄 제거 */
+  display: inline-block; /* 인라인 블록 요소로 표시 */
+  font-size: 16px; /* 글자 크기 */
+  cursor: pointer; /* 커서 모양 변경 */
+  border-radius: 5px; /* 버튼 모서리 둥글게 */
+  margin-right: 10px; /* 오른쪽 여백 */
+}
+
+
+/* 버튼 호버 과 */
+.button-id:hover {
+  background-color: #0056b3; /* 호버 시 배경색 변경 */
+}
+
+/* 버튼 클릭 효과 */
+.button-id:active {
+  background-color: #004080; /* 클릭 시 배경색 변경 */
 }
