수정 - 연필 수정

--- a/views/detail.ejs
+++ b/views/detail.ejs
@@ -19,8 +19,10 @@
         <p><%= result.content %></p>
 
         <div class="button-group">
-            <a href="/edit/<%= result._id %>">✏️</a>
-            <a href="/delete/<%= result._id %>">🗑️</a>
+            <a href="/edit/<%= result._id %>">
+              📝
+            </a>
+            <a href="/delete/<%= result._id %>">🗑️ </a>
         </div>
 
 
