로그인페이지 수정

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -15,10 +15,10 @@
     <input name="password" type="password">
     <button type="submit">SUBMIT</button>
     <br>
-    <div class="find-box">
+    <!-- <div class="find-box">
       <button type="button" class="button-id" onclick="location.href='/findusername'">아이디찾기</button>
       <button type="button" class="button-id" onclick="location.href='/forgot-password'">비밀번호찾기</button>
-    </div>
+    </div> -->
 </form> 
 
 </body>
