--- a/views/main.ejs
+++ b/views/main.ejs
@@ -1,25 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link rel="stylesheet" href="main.css">
 </head>
+
 <body>
 
-<%- include('header.ejs') %>
+  <%- include('header.ejs') %>
 
 
-<h2 style="text-align: center;"><%= userInfo ? userInfo.username : '' %>님 반갑습니다!</h2>
-<table>
-  <tr>
-    <th>ID</th>
-    <td><%= userInfo ? userInfo.username : '' %></td>
-  </tr>
+    <h2 style="text-align: center;">
+      <%= userInfo ? userInfo.username : '' %>님 반갑습니다!
+    </h2>
+    <table>
+      <tr>
+        <th>ID</th>
+        <td>
+          <%= userInfo ? userInfo.username : '' %>
+        </td>
+      </tr>
 
-  
-</table>
+
+    </table>
 
 </body>
+
 </html>
