--- a/views/list.ejs
+++ b/views/list.ejs
@@ -13,13 +13,13 @@
   <%- include('header.ejs') %>
 
     <div class="white-bg">
-      <% for (let i = 글목록.length - 1; i >= 0; i--) { %>
+      <% for (let i=글목록.length - 1; i>= 0; i--) { %>
         <div class="list-box">
           <h2 style="font-size: 1rem;">
             <%= 글목록.length - i %>.
               <a href="/detail/<%= 글목록[i]._id %>">
                 <%= 글목록[i].title %>
-                
+
               </a>
 
 
@@ -27,8 +27,10 @@
 
           </h2>
 
-          <% const createdAt = new Date(글목록[i].createdAt); %>
-          <p>작성 시간: <%= createdAt.toLocaleDateString() %> <%= createdAt.toLocaleTimeString() %></p> 
+          <% const createdAt=new Date(글목록[i].createdAt); %>
+            <p>작성 시간: <%= createdAt.toLocaleDateString() %>
+                <%= createdAt.toLocaleTimeString() %>
+            </p>
         </div>
 
         <% } %>
