이미지 등록부분 수정

--- a/views/write.ejs
+++ b/views/write.ejs
@@ -36,7 +36,7 @@
       <h4>WRITE</h4>
       <input id="title" name="title" class="input-title" placeholder="제목을 입력하세요.">
       <input id="content" name="content" class="input-content" placeholder="내용을 입력하세요.">
-      <input type="file" name="img">
+      <!-- <input type="file" name="img"> -->
       <!-- <input type="file" name="image" accept="image/*"> -->
       <button type="submit">SUBMIT</button>
     </form>
